RESOLVED FIXED283238
Further reduce use of IsDeprecatedTimerSmartPointerException in WebCore/
https://bugs.webkit.org/show_bug.cgi?id=283238
Summary Further reduce use of IsDeprecatedTimerSmartPointerException in WebCore/
Chris Dumez
Reported 2024-11-16 15:23:12 PST
Further reduce use of IsDeprecatedTimerSmartPointerException in WebCore/.
Attachments
Chris Dumez
Comment 1 2024-11-16 15:24:46 PST
EWS
Comment 2 2024-11-17 13:37:06 PST
Committed 286709@main (7cdbf035958e): <https://commits.webkit.org/286709@main> Reviewed commits have been landed. Closing PR #36755 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-17 13:38:15 PST
Note You need to log in before you can comment on or make changes to this bug.