Further reduce use of IsDeprecatedTimerSmartPointerException in WebCore/ https://bugs.webkit.org/show_bug.cgi?id=283238

Reviewed by Darin Adler.

* Source/WebCore/platform/generic/ScrollbarsControllerGeneric.h:
* Source/WebCore/platform/graphics/BitmapImageSource.cpp:
(WebCore::BitmapImageSource::frameAnimator const):
* Source/WebCore/platform/graphics/FontCache.h:
* Source/WebCore/platform/graphics/ImageFrameAnimator.cpp:
(WebCore::ImageFrameAnimator::ref const):
(WebCore::ImageFrameAnimator::deref const):
(WebCore::ImageFrameAnimator::destroyDecodedData):
(WebCore::ImageFrameAnimator::timerFired):
(WebCore::ImageFrameAnimator::imageFrameDecodeAtIndexHasFinished):
(WebCore::ImageFrameAnimator::startAnimation):
(WebCore::ImageFrameAnimator::resetAnimation):
(WebCore::ImageFrameAnimator::sourceUTF8 const):
(WebCore::ImageFrameAnimator::create): Deleted.
* Source/WebCore/platform/graphics/ImageFrameAnimator.h:
* Source/WebCore/platform/graphics/MediaPlaybackTargetPicker.h:
* Source/WebCore/platform/graphics/ShadowBlur.cpp:
(WebCore::ScratchBuffer::ScratchBuffer): Deleted.
(WebCore::ScratchBuffer::WTF_REQUIRES_LOCK): Deleted.
(WebCore::ScratchBuffer::WTF_RETURNS_LOCK): Deleted.
(WebCore::ScratchBuffer::scheduleScratchBufferPurge): Deleted.
(WebCore::ScratchBuffer::purgeTimerFired): Deleted.
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.h:
* Source/WebCore/platform/graphics/ca/TileCoverageMap.h:
(WebCore::TileCoverageMap::setPosition): Deleted.
(WebCore::TileCoverageMap::layer): Deleted.
* Source/WebCore/platform/mock/DeviceOrientationClientMock.h:
* Source/WebCore/platform/mock/MediaPlaybackTargetPickerMock.h:
* Source/WebCore/rendering/RenderLayerCompositor.h:

Canonical link: https://commits.webkit.org/286709@main