Source/WebCore/platform/graphics/FontCache.h
@@ -39,6 +39,7 @@
 #include "Timer.h"
 #include <array>
 #include <limits.h>
+#include <wtf/CheckedPtr.h>
 #include <wtf/CrossThreadCopier.h>
 #include <wtf/Forward.h>
 #include <wtf/HashFunctions.h>
@@ -83,15 +84,6 @@ struct IDWriteFactory;
 #endif
 
 namespace WebCore {
-class FontCache;
-}
-
-namespace WTF {
-template<typename T> struct IsDeprecatedTimerSmartPointerException;
-template<> struct IsDeprecatedTimerSmartPointerException<WebCore::FontCache> : std::true_type { };
-}
-
-namespace WebCore {
 
 class Font;
 class FontCascade;
@@ -122,9 +114,10 @@ enum class FontLookupOptions : uint8_t {
     DisallowObliqueSynthesis = 1 << 2,
 };
 
-class FontCache {
+class FontCache : public CanMakeCheckedPtr<FontCache> {
     WTF_MAKE_TZONE_ALLOCATED(FontCache);
     WTF_MAKE_NONCOPYABLE(FontCache);
+    WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR(FontCache);
 public:
     WEBCORE_EXPORT static FontCache& forCurrentThread();
     static FontCache* forCurrentThreadIfExists();
