Source/WebCore/platform/graphics/MediaPlaybackTargetPicker.h
@@ -29,24 +29,18 @@
 #if ENABLE(WIRELESS_PLAYBACK_TARGET)
 
 #include "PlatformView.h"
+#include <wtf/CheckedPtr.h>
 #include <wtf/Ref.h>
 #include <wtf/RunLoop.h>
-
-namespace WebCore {
-class MediaPlaybackTargetPicker;
-}
-
-namespace WTF {
-template<typename T> struct IsDeprecatedTimerSmartPointerException;
-template<> struct IsDeprecatedTimerSmartPointerException<WebCore::MediaPlaybackTargetPicker> : std::true_type { };
-}
 
 namespace WebCore {
 
 class FloatRect;
 class MediaPlaybackTarget;
 
-class MediaPlaybackTargetPicker {
+class MediaPlaybackTargetPicker : public CanMakeCheckedPtr<MediaPlaybackTargetPicker> {
+    WTF_MAKE_FAST_ALLOCATED;
+    WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR(MediaPlaybackTargetPicker);
 public:
     class Client {
     protected:
