Source/WebCore/platform/graphics/ca/TileCoverageMap.h
@@ -31,18 +31,10 @@
 #include "PlatformCALayer.h"
 #include "PlatformCALayerClient.h"
 #include "Timer.h"
+#include <wtf/CheckedPtr.h>
 #include <wtf/Noncopyable.h>
 #include <wtf/RetainPtr.h>
 #include <wtf/TZoneMalloc.h>
-
-namespace WebCore {
-class TileCoverageMap;
-}
-
-namespace WTF {
-template<typename T> struct IsDeprecatedTimerSmartPointerException;
-template<> struct IsDeprecatedTimerSmartPointerException<WebCore::TileCoverageMap> : std::true_type { };
-}
 
 namespace WebCore {
 
@@ -51,9 +43,10 @@ class IntPoint;
 class IntRect;
 class TileController;
 
-class TileCoverageMap : public PlatformCALayerClient {
+class TileCoverageMap final : public PlatformCALayerClient, public CanMakeCheckedPtr<TileCoverageMap> {
     WTF_MAKE_TZONE_ALLOCATED(TileCoverageMap);
     WTF_MAKE_NONCOPYABLE(TileCoverageMap);
+    WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR(TileCoverageMap);
 public:
     TileCoverageMap(const TileController&);
     ~TileCoverageMap();
